[metadata]
name = odblender
version = 0.0.1
description = odb blender pakki
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/odinndagur/odblender
author = Óðinn Dagur Bjarnason
author_email = odinnd@gmail.com
license = MIT

[options]
py_modules = odblender

[options.entry_points]
console_scripts =
  odblender = odblender:main

[bdist_wheel]
universal = True
